# celery_flask_login

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
celery_flask_login/: __init__.py
example/: celery_app.py
tests/: test_celery_flask_login.py
