[tool.poetry]
name = "celery_flask_login"
version = "0.1.0"
description = ""
authors = ["David Sternlicht <d1618033@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
celery = "^5.2.7"
Flask = "^2.2.2"
Flask-Login = "^0.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
